src/test/deca/context/valid/oracle/binary_op_eq_with_one_class_r.deca
class A{}
class B{}

{
    A a = new A();
    a == null;
}